--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:textSize="25dp"
         android:textColor="#FFFFFF"
-        android:text="Welcome to Firebase"
+        android:text="Welcome to Reply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
